--- a/templates/about.html
+++ b/templates/about.html
@@ -23,6 +23,8 @@
     <div>
     On the home page, upload that file and wait a few seconds for the table to populate!
     </div>
+    <div>
+      View the source code at </div><a href="https://github.com/BluesummersC/FFXI-Inventory-Viewer">GitHub</a>
 	  
 	{% endblock %}
   </body>
