--- a/templates/template.html
+++ b/templates/template.html
@@ -31,6 +31,9 @@
 				<a class="nav-link" href="about">About</a>
 			  </li>
 			  <!-- <li class="nav-item">
+				<a class="nav-link" href="home">Test</a>
+			  </li> -->
+			  <!-- <li class="nav-item">
 				<a class="nav-link" href="inventory">Inventory</a>
 			  </li>
 			  <li class="nav-item dropdown">
@@ -50,9 +53,11 @@
 	
 	{% block sidebar %}
 	{% endblock %}
-	
+
 	{% block content %}
 	{% endblock %}
+
+
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 		<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
